<resources>
    <string name="app_name">VATSCAN</string>
    <string name="title_activity_maps">VATSCAN</string>
    <string name="main_content">Main Content</string>
    <string name="sliding_panel">Flight Info will go here</string>
    <string name="aircraft_label">Aircraft</string>
    <string name="dep_airport" />
    <string name="arr_airport" />
    <string name="callsign" />
    <string name="client_name" />
    <string name="client_id" />
    <string name="aircraft" />
    <string name="altitude" />
    <string name="heading" />
    <string name="speed" />
    <string name="dist_flown_label">Flown</string>
    <string name="dist_remaining_label">Remaining</string>
    <string name="dist_remaining" />
</resources>
